# mcp-text-to-sql

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: init-mongo.js  init-postgres.sql
src/: __init__.py
src/api/: main.py
src/api/tools/: __init__.py
src/application/dto/: __init__.py
src/application/services/: __init__.py  datasource_service.py  query_service.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  datasource.py  query.py  result.py
src/domain/ports/: __init__.py  datasource_port.py  schema_port.py  translator_port.py
src/infrastructure/adapters/: factory.py
src/infrastructure/adapters/files/: __init__.py  csv_adapter.py  excel_adapter.py
src/infrastructure/adapters/nosql/: __init__.py  mongodb_adapter.py
src/infrastructure/adapters/sql/: __init__.py  base_sql_adapter.py  mysql_adapter.py  postgresql_adapter.py  sqlite_adapter.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/llm/: __init__.py  anthropic_translator.py  base_translator.py  gemini_translator.py  openai_translator.py
tests/: conftest.py
tests/unit/: test_datasource_service.py  test_query_service.py
